--- a/Enc2Dec.ipynb
+++ b/Enc2Dec.ipynb
@@ -231,11 +231,11 @@
         "###email data \n",
         "subject = \"crypted data from frive to you\"\n",
         "body = \"This is an email with attachment sent from Python\"\n",
-        "sender_email = \"maroubenm225@gmail.com\"\n",
-        "receiver_email = \"benmoussa.marouanee@gmail.com\"\n",
+        "sender_email = \"********@gmail.com\"\n",
+        "receiver_email = \"****************@gmail.com\"\n",
         "\n",
         "###file wanted\n",
-        "FileWanted = 'Bosma.txt'\n",
+        "FileWanted = 'Bos.txt'\n",
         "\n",
         "try: \n",
         "    print(\"enter email app code ! \")\n",
